# wealthhive

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  app.py  factor_models.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  dependencies.py  main.py
app/core/: events.py  exceptions.py  middleware.py  security.py
app/services/: backtest_service.py  market_data_service.py  notification_service.py  portfolio_service.py
backtest/: __init__.py
backtest/data/: __init__.py  data_handler.py
backtest/engine/: __init__.py  backtest_engine.py  execution_handler.py  portfolio_handler.py
backtest/metrics/: performance.py  risk.py
backtest/optimization/: __init__.py  grid_search.py  walk_forward.py
backtest/reporting/: __init__.py  report_generator.py
backtest/strategies/: __init__.py  base_strategy.py  machine_learning.py  mean_reversion.py  momentum.py  moving_average.py
core/: __init__.py
core/entities/: __init__.py  asset.py  order.py  portfolio.py  strategy.py  user.py
core/repositories/: __init__.py  asset_repository.py  portfolio_repository.py  user_repository.py
core/use_cases/: __init__.py
frontend/: __init__.py  app.py
frontend/components/: __init__.py  cards.py  forms.py  navigation.py  tables.py
fundamental/: __init__.py
infrastructure/: __init__.py
ml/: __init__.py
monitoring/: __init__.py  init.py
nlp/: __init__.py  bertimbau_model.py  entity_extractor.py  finbert_model.py  news_classifier.py  sentiment_analyzer.py  summarizer.py  text_preprocessor.py
quant/: __init__.py
websocket/: __init__.py  auth.py  broadcast.py  connection_manager.py  exceptions.py  heartbeat.py  message_handler.py  rate_limiter.py  rooms.py  serializers.py  server.py
(+144 files in other folders)
